kubernetes-manifests/networking/istio-secure-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "onlineboutique.example.com"
  gateways:
  - frontend-gateway-secure
  http:
   - route:
      - destination:
         host: frontend
         port:
           number: 80
