kubernetes-manifests/networking/istio-virtual-service-weighted.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-weighted-vsvc
spec:
  hosts:
  - "onlineboutique.example.com"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
        subset: v1
      weight: 50
    - destination:
        host: frontend
        port:
          number: 80
        subset: v2
      weight: 50
