kubernetes-manifests/networking/istio-virtual-svc-with-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-routed-vsvc
spec:
  hosts:
   - "onlineboutique.example.com"
  gateways:
   - frontend-gateway
  http:
  - route:
     - destination:
         host: frontend
         port:
           number: 80
         subset: v1
    timeout: 3s
