kubernetes-manifests/networking/istio-vsvc-useragent-based-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-routed-vsvc
spec:
  hosts:
   - "onlineboutique.example.com"
  gateways:
   - frontend-gateway
  http:
  - match:
     - headers:
         user-agent:
           regex: ".*Chrome/.*"
    route:
      - destination:
          host: frontend
          port:
            number: 80
          subset: v2
  - match:
     - headers:
         user-agent:
           regex: ".*Firefox/.*"
    route:
     - destination:
         host: frontend
         port:
           number: 80
         subset: v1
